--- a/index.html
+++ b/index.html
@@ -69,7 +69,21 @@
         <!-- Tab content -->
         <div id="Overview" class="tabcontent">
           <h3>Overview</h3>
-          <p>Our team is working to create a viable product to help manage a student-teacher transition process. It will reduce the amount of time it takes to get students enrolled in teaching jobs outside of college and streamline the application process for faculty.</p>
+          <p>Our team is working to create a viable product to help manage a student-teacher transition process. 
+            It will reduce the amount of time it takes to get students enrolled in teaching jobs outside of college 
+            and streamline the application process for faculty. 
+          <br>
+          <br>
+            This process is offered to 12 different degree programs, each with differing requirements that must be managed.
+            Currently, the College of Education uses a manual process to track requirements for each individual student 
+            teacher in an Excel spreadsheet. College of Education staff spend well over 200 hours each semester on this 
+            process that could be used to provide other services to students. 
+          <br>
+          <br>
+          Our goal is to make this process automated, 
+          so that no data will need manual input, and students can upload their own data for review by faculty members 
+          at their earliest convienence.
+        </p>
         </div>
 
         <div id="Team" class="tabcontent">
@@ -92,17 +106,55 @@
 
         <div id="Requirements" class="tabcontent">
           <h3>Requirements</h3>
-          <p></p>
+          <p>Some of our requirements include a streamlined experiance with any students 
+            or faculty who are involved in the process, safe and efficent manangment of 
+            data, and of course maintained privacy for students who decide to pursue this 
+            course of action. We believe that we can accomplish these requirements by starting 
+            with the data manangment systems and moving up to the user interface from there, 
+            allowing all of the data to be securly transferred to and from the students or 
+            faculty that would be using this system. Creating a backend based system allows 
+            for more changes to be implemented if the requirements for certain courses need 
+            to be added, removed or altered. It would also allow for more of a streamlined 
+            experiance through differing programs having a direct connection to their backend 
+            counterparts</p>
         </div>
 
         <div id="Solution" class="tabcontent">
-          <h3>Solution</h3>
-          <p></p>
+          <h3>Ideal Solution</h3>
+          <p>Our ideal solution is a web app that will act as a single source of truth for 
+            all student information. Storing school records along with auxiliary documents.
+            This information will be pulled from existing school records APIs, and student 
+            and admin accounts and authentication will be provided through the school 
+            authentication system. This would also allow for the ability to send documents 
+            for signatures electronically rather than physically.
+          </p>
+          <h3>Non-Ideal Solution</h3>
+          <p>If we do not have access to existing school infrastructure, we still have options.
+            The system will continue to offer the same functionality, but will require 
+            additional human input. Student records will have to be imported by a college employee 
+            and site admin. It will then be parsed by the system to generate student accounts, 
+            and accompanying data.
+          </p>
         </div>
 
         <div id="Technologies" class="tabcontent">
           <h3>Technologies</h3>
-          <p></p>
+          <p>We are using Java to code the basic backend functions, allowing us to sort and 
+            notify the correct users when data is uploaded or updated to a database. We also 
+            plan to use OpenAPI for the data modeling and API models. Lastly we are planning 
+            to use SprintBoot to generate webpages for users to be able to access or edit their 
+            data, as a kind of popup UI for the time being.
+            <br>
+            <br>
+            We do plan to deploy a cloud infastructure using SQL for the database and implementing 
+            an S3-like Solution as large format data storage for files, but right now we are 
+            focusing on the basics of the backend solution.
+            <br>
+            <br>
+            We currently do not have a budget or schedule, but once we are underway with our 
+            project, those will be added here. 
+          </p>
+
         </div>
 
         <div id="Deliverables" class="tabcontent">
