Added DropDown Expansion

--- a/landing-page.html
+++ b/landing-page.html
@@ -14,19 +14,57 @@
         </div>
       </header>
     <div class="column">
-        <h2>Tabs</h2>
-        <p>put nav tabs here</p>
-    </div>
-    <div class="column">
         <h2>Current Tasks</h2>
-        <p>INSERT CURRENT TASK DESCRIPTION/LINK</p>
-    </div>
+        <button class="accordion">Section 1</button>
+        <div class="panel">
+          <p>Lorem ipsum...</p>
+        </div>
+        <button class="accordion">Section 1</button>
+        <div class="panel">
+          <p>Lorem ipsum...</p>
+        </div>
+        <button class="accordion">Section 1</button>
+        <div class="panel">
+          <p>Lorem ipsum...</p>
+        </div>
+        <button class="accordion">Section 1</button>
+        <div class="panel">
+          <p>Lorem ipsum...</p>
+        </div>
     <div class="column">
         <h2>Upcoming Tasks</h2>
-        <p>INSERT NEXT SCHEDULED TASK</p>
-    </div>
-    <div class="column">
-        <h2>CALENDER</h2>
-        <p>INSERT CALENDER HERE</p>
+        <button class="accordion">Section 1</button>
+        <div class="panel">
+          <p>Lorem ipsum...</p>
+        </div>
+        <button class="accordion">Section 1</button>
+        <div class="panel">
+          <p>Lorem ipsum...</p>
+        </div>
+        <button class="accordion">Section 1</button>
+        <div class="panel">
+          <p>Lorem ipsum...</p>
+        </div>
+        <button class="accordion">Section 1</button>
+        <div class="panel">
+          <p>Lorem ipsum...</p>
+        </div>
     </div>
   </body>
+
+<script>
+var acc = document.getElementsByClassName("accordion");
+var i;
+
+for (i = 0; i < acc.length; i++) {
+  acc[i].addEventListener("click", function() {
+    this.classList.toggle("active");
+    var panel = this.nextElementSibling;
+    if (panel.style.maxHeight) {
+      panel.style.maxHeight = null;
+    } else {
+      panel.style.maxHeight = panel.scrollHeight + "px";
+    }
+  });
+}
+</script>
