--- a/landing-page.html
+++ b/landing-page.html
@@ -32,7 +32,7 @@
           <p>Lorem ipsum...</p>
         </div>
     <div class="column">
-        <h2>Upcoming Tasks</h2>
+        <h2>Completed Tasks</h2>
         <button class="accordion">Section 1</button>
         <div class="panel">
           <p>Lorem ipsum...</p>
