--- a/index.html
+++ b/index.html
@@ -160,6 +160,10 @@
         <div id="Deliverables" class="tabcontent">
           <h3>Deliverables</h3>
           <p>We upload deliverables weekly, and will be making updated changes throughout the 2022 - 2023 school year. To view our past and current deliverables, please visit our Github at <a href="https://github.com/TeacherTodo">github.com/TeacherTodo</a> </p>
+          <h3>Requirements Document:</h3>
+          <p><iframe src="Documents/Requirements.pdf" width="100%" height="500px"></iframe></p>
+          <h3>Feasibility Document:</h3>
+          <p><iframe src="Documents/Feasibility.pdf" width="100%" height="500px"></iframe></p>
         </div>
 
       </p>
