--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
       .tab {
         overflow: hidden;
         background-color: rgb(0, 51, 102);
+        padding-left: 50px;
       }
-      
+
       /* Style the buttons inside the tab */
       .tab button {
         background-color: inherit;
@@ -49,8 +50,9 @@
     <main>
       <header>
         <div class="content-width">
-          <h1><img src="Icon.png" alt="Team Logo" width="80" height="80"> Teacher To-Do  </h1>
-          <h2> <strong>A project devoted to helping new student teachers.</strong> </h2>
+          <h1 align="center"><img src="Icon.png" alt="Team Logo" width="80" height="80"></h1>
+          <h1 align="center">Teacher To-Do</h1>
+          <h2 align="center"> <strong>A project devoted to helping new student teachers.</strong> </h2>
         </div>
       </header>
 
@@ -160,10 +162,10 @@
         <div id="Deliverables" class="tabcontent">
           <h3>Deliverables</h3>
           <p>We upload deliverables weekly, and will be making updated changes throughout the 2022 - 2023 school year. To view our past and current deliverables, please visit our Github at <a href="https://github.com/TeacherTodo">github.com/TeacherTodo</a> </p>
-          <h3>Requirements Document:</h3>
+          <!-- <h3>Requirements Document:</h3>
           <p><iframe src="Documents/Requirements.pdf" width="100%" height="500px"></iframe></p>
           <h3>Feasibility Document:</h3>
-          <p><iframe src="Documents/Feasibility.pdf" width="100%" height="500px"></iframe></p>
+          <p><iframe src="Documents/Feasibility.pdf" width="100%" height="500px"></iframe></p> -->
         </div>
 
       </p>
