--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
           <p><iframe src="Documents/Requirements.pdf" width="100%" height="500px"></iframe></p>
           <h3>Feasibility Document:</h3>
           <p><iframe src="Documents/Feasibility.pdf" width="100%" height="500px"></iframe></p>
+          <a href="https://youtu.be/9-hTAnvH5Bk">Design Review 2</a>
         </div>
 
       </p>
