Added Resume to team members

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
         
         <!-- Tab content -->
         <div id="Overview" class="tabcontent">
-          <h3>Overview</h3>
+          <h3>Project Desciption</h3>
+          <h5>Problem Statement</h5>
           <p>Our team is working to create a viable product to help manage a student-teacher transition process. 
           It will reduce the amount of time it takes to get students enrolled in teaching jobs outside of college 
           and streamline the application process for faculty. </p>
@@ -98,13 +99,13 @@
           <p><u>Our team consists of 5 members and our client:</u></p>
 
           <img src="Headshots/Sam.jpg" alt="Sam Gerstner" width="100" height="100" style="vertical-align:middle">
-          <p><strong>Sam Gerstner</strong> - Team Lead </p>
+          <p><strong><a href="Documents/Sam_resume.pdf" target="_blank">Sam Gerstner</a></strong> - Team Lead </p>
           <img src="Headshots/Alexander.jpg" alt="Alexander Frenette" width="100" height="100" style="vertical-align:middle">
-          <p><strong>Alexander Frenette</strong> - Backend Developer</p>
+          <p><strong><a href="Documents/Alex_resume.pdf" target="_blank">Alexander Frenette</a></strong> - Backend Developer</p>
           <img src="Headshots/Noah.jpg" alt="Noah Nannen" width="100" height="100" style="vertical-align:middle">
-          <p><strong>Noah Nannen</strong> - User Interface Developer</p>
+          <p><strong><a href="Documents/Noah_resume.pdf" target="_blank">Noah Nannen</a></strong> - User Interface Developer</p>
           <img src="Headshots/Shlok.jpg" alt="Shlok Sheth" width="100" height="100" style="vertical-align:middle">
-          <p><strong>Shlok Sheth</strong> - Full Stack Developer</p>
+          <p><strong><a href="Documents/Shlok_resume.pdf" target="_blank">Shlok Sheth</a></strong> - Full Stack Developer</p>
           <img src="Headshots/Chris.jpg" alt="Chris Aungst" width="100" height="100" style="vertical-align:middle">
           <p><strong>Chris Aungst</strong> - Director of Professional Education Program and Project Client</p>
         </div>
@@ -143,7 +144,7 @@
           <p>Reguardless of how we are able to accomplish this goal, we will be using an HTML5-based 
             front-end User Interface. The final design of this UI is not set, but below is an example 
             of a very basic student view.</p>
-            <h1 align="center"><img src="StudentLandingPage.png" alt="Trial Student Landing Page" width="600" height="400"></h1>
+            <h1 align="center"><img src="StudentLandingPage.jpg" alt="Trial Student Landing Page" width="600" height="400"></h1>
         </div>
 
 
@@ -178,7 +179,7 @@
           <p><iframe src="Documents/Requirements.pdf" width="100%" height="500px"></iframe></p>
           <h3>Feasibility Document:</h3>
           <p><iframe src="Documents/Feasibility.pdf" width="100%" height="500px"></iframe></p>
-          <a href="https://youtu.be/9-hTAnvH5Bk">Design Review 2</a>
+          <a href="https://youtu.be/Y4ZxzZQd1LY">Design Review</a>
         </div>
 
       </p>
