Solution Screenshot sizing

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             A student will be able to access each of their tasks, attach documents to certain tasks,
             and then submit those documents for administrator review. 
           </p>
-          <h1 align="center"><img src="Student.png" alt="Student View"></h1>
+          <h1 align="center"><img src="Student.png" alt="Student View" height="600" width="875" ></h1>
           <center><h3>Administrator Dashboard</h3></center>
           <p>The administrator dashboard is more complex than the student dashboard. This dashboard 
             displays all students currently enrolled in the STIC program, as well as all of their tasks, 
@@ -160,7 +160,7 @@
             for student data to be imported or exported using FileMaker Pro or an Excel spreadsheet, 
             which allows for flawless integration with the current system in use by the College of Education.
           </p>
-            <h1 align="center"><img src="Dashboard.png" alt="Administrator View"></h1>
+            <h1 align="center"><img src="Dashboard.png" alt="Administrator View" height="600" width="875"></h1>
           </justify>
         </div>
 
